# Sidar

./: .coverage-baseline  .coveragerc  .env.example  .env.test  .gitignore  .note  .yamllint  :memory:  <MagicMock name='mock.COST_ROUTING_SHARED_BUDGET_DB_PATH' id='125861690114704'>  <MagicMock name='mock.COST_ROUTING_SHARED_BUDGET_DB_PATH' id='128901074165008'>  <MagicMock name='mock.COST_ROUTING_SHARED_BUDGET_DB_PATH' id='134681068265040'>  <MagicMock name='mock.COST_ROUTING_SHARED_BUDGET_DB_PATH' id='134681068816016'>  AGENTS.md  AI_CONTEXT.md  ARCHIVE_AUDITS.md  AUDIT_REPORT_v4.0.md  AUDIT_REPORT_v5.0.md  AUDIT_REPORT_v5.1.md  AUDIT_REPORT_v5.1_COMPREHENSIVE.md  CHANGELOG.md  CLAUDE.md  DUZELTME_GECMISI.md  Dockerfile  KULLANICI_REHBERI.md  MANIFEST.in  PROJE_RAPORU copy.md  PROJE_RAPORU.md  README.md  RFC-MultiAgent.md  SIDAR.md  TEKNIK_REFERANS.md  WEB_ARAYUZU_REHBERI.md  YENI_DETAYLI_PROJE_RAPORU.md  alembic.ini  cli.py  config.py  coverage.xml  demo.txt  desktop_app.py  docker-compose.yml  (+15 more)
.benchmarks/Linux-CPython-3.11-64bit/: 0001_baseline.json  0002_baseline.json  0003_baseline.json  0004_baseline.json  0005_baseline.json  0006_baseline.json  0007_baseline.json  0008_baseline.json  0009_baseline.json  0010_baseline.json  0011_baseline.json  0012_baseline.json  0013_baseline.json  0014_baseline.json  0015_baseline.json  0016_baseline.json  0017_baseline.json  0018_baseline.json  0019_baseline.json  0020_baseline.json  0021_baseline.json  0022_baseline.json
.ci/: backend_hotspot_gate.json
.github/workflows/: ci.yml  migration-cutover-checks.yml  nightly-auth-benchmark.yml  nightly-flaky-scan.yml  nightly-gpu-performance.yml  release-db-benchmark-trend.yml  weekly-mutation-and-critical-tests.yml
agent/: __init__.py  auto_handle.py  base_agent.py  definitions.py  registry.py  sidar_agent.py  swarm.py  tooling.py
agent/core/: __init__.py  contracts.py  event_stream.py  memory_hub.py  registry.py  supervisor.py
agent/roles/: __init__.py  coder_agent.py  coverage_agent.py  poyraz_agent.py  qa_agent.py  researcher_agent.py  reviewer_agent.py
artifacts/benchmark/: benchmark.json
artifacts/remediation/: heal_result.json
backups/: postgres_before_volume_reset_20260422_052240.sql  postgres_before_volume_reset_20260422_053906.sql  postgres_before_volume_reset_20260422_093142.sql  postgres_before_volume_reset_20260422_160515.sql  postgres_before_volume_reset_20260422_171442.sql
core/: __init__.py  active_learning.py  agent_metrics.py  cache_metrics.py  ci_remediation.py  db.py  dlp.py  embeddings.py  entity_memory.py  hitl.py  judge.py  llm_client.py  llm_metrics.py  memory.py  multimodal.py  rag.py  router.py  vision.py  voice.py
core/cache/: __init__.py  semantic_cache.py
core/utils/: json_repair.py  token_counter.py
docker/prometheus/: prometheus.yml
docs/: AUDIT_REPORT_v5.1.md  AUDIT_REPORT_v5.1_COMPREHENSIVE.md  COVERAGE_AGENT_KULLANIMI.md  PERFORMANCE_BENCHMARK_ANALIZI_2026-04-25.md  PROJE_RAPORU.md  SIDAR.md  SIDAR_v5_0_MIMARI_RAPORU.md  SIDAR_v5_1_MIMARI_RAPORU.md  TEKNIK_REFERANS.md  TEST_OPTIMIZATION_PLAN.md  pywebview_migration.md  test_results_analysis_2026-04-26.md
docs/architecture/: event_bus_refactor_plan.md
docs/archive/: audit_history.md  environment.yml  resolved_issues_v3.md
docs/audits/: AUDIT_REPORT.md
docs/module-notes/: 00-roadmap.md  CHANGELOG.md.md  CLAUDE.md.md  Dockerfile.md  INDEX.md  (+30 more)
launcher_frontend/: index.html  package.json
launcher_gui/: index.html  script.js  style.css
launcher_ui/: index.html  package.json  styles.css  wizard.js
managers/: __init__.py  browser_manager.py  code_manager.py  github_manager.py  jira_manager.py  package_info.py  security.py  slack_manager.py  social_media_manager.py  system_health.py  teams_manager.py  todo_manager.py  web_search.py  youtube_manager.py
migrations/: env.py  script.py.mako
plugins/: __init__.py  aws_management_agent.py  crypto_price_agent.py  slack_notification_agent.py  upload_agent.py
runbooks/: chaos_live_rehearsal.md  mypy_self_heal_strategy.md  observability_simulation.md  plugin_marketplace_demo.md  production-cutover-playbook.md  tenant_rbac_scenarios.md  wsl-win11-ux582zw-checklist.md
scripts/: audit_metrics.sh  auto_heal.py  auto_remediate_tests.py  autonomous_type_fix.py  check_empty_test_artifacts.sh  check_env_parity.sh  check_hotspot_gate.py  collect_repo_metrics.sh  coverage_hotspots.py  install_ci_system_deps.sh  install_host_sandbox.sh  load_test_db_pool.py  migrate_sqlite_to_pg.py
sidar_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: sample.py
tests/: README.md  __init__.py  conftest.py  helpers.py  test_active_learning.py  test_agent_and_anthropic_coverage.py  test_agent_auto_handle.py  test_agent_auto_handle_extra.py  test_agent_base_agent.py  test_agent_catalog_coverage.py  test_agent_core_components.py  test_agent_core_contracts.py  test_agent_core_event_stream.py  test_agent_core_event_stream_extra.py  test_agent_core_init_coverage.py  test_agent_core_lazy_and_base_extra.py  test_agent_core_memory_hub.py  test_agent_core_registry.py  test_agent_core_registry_runtime.py  test_agent_core_supervisor.py  test_agent_core_supervisor_extra.py  test_agent_crisis_decision_paths.py  test_agent_definitions.py  test_agent_foundations.py  test_agent_init_coverage.py  test_agent_init_improvements.py  test_agent_metrics.py  test_agent_package_init.py  test_agent_package_inits.py  test_agent_registry.py  test_agent_registry_runtime.py  test_agent_roles_coder_agent.py  test_agent_roles_coverage_agent.py  test_agent_roles_poyraz_agent.py  test_agent_roles_qa_agent.py  test_agent_roles_researcher_agent.py  test_agent_roles_researcher_agent_extra.py  test_agent_roles_reviewer_agent.py  test_agent_roles_reviewer_agent_extra.py  test_agent_routing_edge_cases_round4.py  (+359 more)
web_gui/: app.js  index.html  style.css
web_ui/: app.js  chat.js  index.html  rag.js  sidebar.js  style.css  voice_live_utils.js
web_ui_react/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
(+440 files in other folders)
