[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidar"
version = "5.2.0"
description = "Sidar AI: Multi-Agent Autonomous System with Swarm Capability"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Nilüfer Bagevi", email = "niluferbagevi@example.com"},
]
keywords = ["ai", "agent", "swarm", "code-generation", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # ── Temel altyapı ──────────────────────────────────────────────────────
  "packaging~=24.1",
  "python-dotenv~=1.0.1",
  "pyyaml~=6.0.2",
  "httpx~=0.27.0",
  "pydantic~=2.8.2",
  "cachetools~=5.5.0",
  "redis~=5.2.1",
  "psutil~=6.0.0",
  # ── Web sunucu ─────────────────────────────────────────────────────────
  "fastapi~=0.115.0",
  "python-multipart~=0.0.9",
  "uvicorn[standard]~=0.30.6",
  "anyio>=4.0.0",
  # ── Veritabanı ─────────────────────────────────────────────────────────
  "aiosqlite~=0.20.0",
  "SQLAlchemy~=2.0.36",
  "alembic~=1.14.0",
  # ── Güvenlik / Kimlik doğrulama ────────────────────────────────────────
  "cryptography~=43.0.1",
  "PyJWT~=2.9.0",
  # ── Observability (temel) ──────────────────────────────────────────────
  "prometheus-client~=0.21.0",
  # ── İçerik işleme ─────────────────────────────────────────────────────
  "tiktoken~=0.8.0",
  "rank-bm25==0.2.2",
  "beautifulsoup4~=4.12.3",
  "bleach~=6.1.0",
  # ── Harici entegrasyonlar ─────────────────────────────────────────────
  "PyGithub~=2.4.0",
  "duckduckgo-search~=6.2.13",
  "openai>=1.68.2,<2.0.0",
  "anthropic~=0.40.0",
  "google-generativeai~=0.8.3",
  "litellm~=1.74.0",
  "chromadb~=0.5.5",
  "sentence-transformers~=3.0.1",
  "pgvector~=0.3.6",
  "pyttsx3~=2.98",
  "SpeechRecognition~=3.10.4",
  "pyaudio~=0.2.14",
  "openai-whisper>=20231117",
  "yt-dlp>=2024.0.0",
]

[project.urls]
Repository = "https://github.com/niluferbagevi-gif/Sidar"
Documentation = "https://github.com/niluferbagevi-gif/Sidar/docs"
Changelog = "https://github.com/niluferbagevi-gif/Sidar/releases"
Issues = "https://github.com/niluferbagevi-gif/Sidar/issues"

[project.optional-dependencies]
# ── LLM sağlayıcıları (istenilen sağlayıcı için ilgili extras ekleyin) ──
gemini = [
  "google-generativeai~=0.8.3",
]
anthropic = [
  "anthropic~=0.40.0",
]
openai = [
  "openai>=1.68.2,<2.0.0",
]
litellm = [
  "litellm~=1.74.0",
]

# ── Altyapı extras ────────────────────────────────────────────────────────
postgres = [
  "asyncpg~=0.30.0",
]
telemetry = [
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29.0",
]
rag = [
  "chromadb~=0.5.5",
  "torch>=2.4.1",
  "sentence-transformers~=3.0.1",
]
gpu = [
  "nvidia-ml-py~=12.560.30",
]
sandbox = [
  "docker~=7.1.0",
]
gui = [
  "eel>=0.16.0",
]
browser = [
  "playwright~=1.51.0",
  "selenium~=4.29.0",
]

# ── Kolaylık profilleri ───────────────────────────────────────────────────
all = [
  "sidar[gemini,anthropic,openai,litellm,postgres,telemetry,rag,gpu,sandbox,gui,browser]",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov~=5.0.0",
  "pytest-benchmark~=4.0.0",
  "ruff~=0.8.1",
  "mypy~=1.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "asyncio: run coroutine test",
  "slow: yavaş entegrasyon testleri (CI'da -m \"not slow\" ile atlanabilir)",
  "pg_stress: PostgreSQL bağlantı havuzu yük testleri (postgres servisi gerektirir)",
  "benchmark: performans baseline testleri",
  "integration: harici sistem entegrasyonları",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:setuptools",
  "ignore::FutureWarning:torch",
  "ignore::UserWarning:torch",
  "ignore::ResourceWarning",
]
log_cli = false
log_cli_level = "INFO"
log_file = "tests/pytest.log"
log_file_level = "DEBUG"
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "core*", "managers*", "plugins*"]
exclude = ["tests*", "docs*", "scripts*", "data*", "logs*", "*.tests"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "data",
  "logs",
  "temp",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "ASYNC",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
pretty = true
exclude = [
  "^tests/",
  "^data/",
  "^logs/",
  "^temp/",
]

[[tool.mypy.overrides]]
module = [
  "google.generativeai",
  "google.generativeai.*",
  "chromadb",
  "chromadb.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "duckduckgo_search",
  "duckduckgo_search.*",
  "github",
  "github.*",
  "opentelemetry",
  "opentelemetry.*",
  "redis",
  "redis.*",
  "prometheus_client",
  "prometheus_client.*",
]
ignore_missing_imports = true