[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sidar"
version = "5.2.0"
description = "Sidar AI: Multi-Agent Autonomous System with Swarm Capability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.13"
authors = [
  {name = "Nilüfer Bagevi", email = "niluferbagevi@users.noreply.github.com"},
]
keywords = ["ai", "agent", "swarm", "code-generation", "rag"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # ── Temel altyapı ──────────────────────────────────────────────────────
  "packaging~=24.1",
  "python-dotenv~=1.0.1",
  "pyyaml~=6.0.2",
  "httpx~=0.27.0",
  "pydantic~=2.8.2",
  "pydantic-settings~=2.3.4",
  "cachetools~=5.5.0",
  "redis~=5.2.1",
  "psutil~=6.0.0",
  # ── Web sunucu ─────────────────────────────────────────────────────────
  "fastapi~=0.115.0",
  "python-multipart~=0.0.9",
  "uvicorn[standard]~=0.30.6",
  "anyio>=4.0.0",
  # ── Veritabanı ─────────────────────────────────────────────────────────
  "aiosqlite~=0.20.0",
  "SQLAlchemy~=2.0.36",
  "alembic~=1.14.0",
  # ── Güvenlik / Kimlik doğrulama ────────────────────────────────────────
  "cryptography~=43.0.1",
  "PyJWT~=2.9.0",
  # ── HTTP istemcisi ─────────────────────────────────────────────────────
  "requests~=2.32.0",
  # ── İçerik işleme ─────────────────────────────────────────────────────
  "tiktoken~=0.8.0",
  "rank-bm25==0.2.2",
  "beautifulsoup4~=4.12.3",
  "bleach~=6.1.0",
  "nemoguardrails~=0.11.0",
  # ── Harici entegrasyonlar ─────────────────────────────────────────────
  "PyGithub~=2.4.0",
  "duckduckgo-search~=6.2.13",
  "websockets<15.0",
  "pillow<12.0.0",
  "pyttsx3~=2.98",
  "chromadb~=0.5.5",
  "posthog<6.0.0",
  "sentence-transformers~=3.0.1",
  # ── Geliştirme ve test araçları (standart kurulum akışına dahil) ─────
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.6.1",
  "freezegun>=1.5.1",
  "pytest-cov~=5.0.0",
  "pytest-benchmark~=4.0.0",
  "pytest-mock>=3.14.0",
  "hypothesis>=6.112.0",
  "respx>=0.21.1",
  "fakeredis>=2.20.0",
  "testcontainers>=4.0.0",
  "ruff~=0.8.1",
  "mypy~=1.11.2",
  "bandit>=1.7.0",
  "safety>=3.0.0",
  "asyncpg~=0.30.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
]

[project.urls]
Repository = "https://github.com/niluferbagevi-gif/Sidar"
Documentation = "https://github.com/niluferbagevi-gif/Sidar/tree/main/docs"
Changelog = "https://github.com/niluferbagevi-gif/Sidar/blob/main/CHANGELOG.md"
Issues = "https://github.com/niluferbagevi-gif/Sidar/issues"

[project.scripts]
sidar = "cli:main"
sidar-gui = "gui_launcher:main"
sidar-web = "web_server:main"

[project.optional-dependencies]
# ── LLM sağlayıcıları (istenilen sağlayıcı için ilgili extras ekleyin) ──
gemini = [
  "google-genai~=0.5.0",
]
anthropic = [
  "anthropic~=0.40.0",
]
openai = [
  "openai~=1.109.1",
]
litellm = [
  "litellm==1.74.15.post2",
]

# ── Altyapı extras ────────────────────────────────────────────────────────
postgres = [
  "asyncpg~=0.30.0",
  "pgvector~=0.3.6",
]
telemetry = [
  "prometheus-client~=0.21.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
]
rag = [
  "chromadb~=0.5.5",
  "posthog<6.0.0",
  "torch>=2.4.1",
  "torchvision",
  "sentence-transformers~=3.0.1",
]
lora = [
  "transformers>=4.44.0",
  "peft>=0.12.0",
  "datasets>=2.20.0",
  "bitsandbytes>=0.43.0; platform_system != 'Darwin'",
]
gpu = [
  "nvidia-ml-py~=12.560.30",
]
sandbox = [
  "docker~=7.1.0",
]
gui = [
  "eel>=0.16.0",
]
slack = [
  "slack-sdk~=3.33.0",
]
browser = [
  "playwright~=1.51.0",
  "selenium~=4.29.0",
]
voice = [
  "SpeechRecognition~=3.10.4",
  "pyaudio~=0.2.14",
  "openai-whisper>=20231117",
]
tools = [
  "yt-dlp>=2024.0.0",
]
aws = [
  "boto3~=1.35.0",
]
jira = [
  "jira~=3.8.0",
]
teams = [
  "pymsteams~=0.2.3",
]

# ── Kolaylık profilleri ───────────────────────────────────────────────────
all = [
  "sidar[gemini,anthropic,openai,litellm,postgres,telemetry,rag,lora,gpu,sandbox,gui,slack,browser,voice,tools,aws,jira,teams,dev]",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist>=3.6.1",
  "freezegun>=1.5.1",
  "pytest-cov~=5.0.0",
  "pytest-benchmark~=4.0.0",
  "pytest-mock>=3.14.0",
  "hypothesis>=6.112.0",
  "respx>=0.21.1",
  "fakeredis>=2.20.0",
  "testcontainers>=4.0.0",
  "ruff~=0.8.1",
  "mypy~=1.11.2",
  "bandit>=1.7.0",
  "safety>=3.0.0",
  "asyncpg~=0.30.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-exporter-otlp>=1.29.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "asyncio: run coroutine test",
  "slow: yavaş entegrasyon testleri (CI'da -m \"not slow\" ile atlanabilir)",
  "gpu: gerçek GPU donanımı gerektiren testler (CI ortamlarında atlanmalıdır)",
  "gpu_stress: uzun/yoğun GPU yük testleri (CI pipeline'ında ayrı job olarak çalıştırılabilir)",
  "pg_stress: PostgreSQL bağlantı havuzu yük testleri (postgres servisi gerektirir)",
  "benchmark: performans baseline testleri",
  "integration: harici sistem entegrasyonları",
  "quality_gate: LLM kalite kapısı doğrulamaları",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:setuptools",
  "ignore::FutureWarning:torch",
  "ignore::UserWarning:torch",
  "ignore::ResourceWarning",
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
  "ignore:Field \"model_.*\" has conflict with protected namespace:UserWarning",
  "ignore:Benchmarks are automatically disabled because xdist plugin is active\\.Benchmarks cannot be performed reliably in a parallelized environment\\.:pytest_benchmark.logger.PytestBenchmarkWarning",
  "ignore:invalid escape sequence '\\\\g':DeprecationWarning:sentence_transformers.evaluation.SentenceEvaluator",
  "ignore:invalid escape sequence.*:DeprecationWarning:sentence_transformers.*",
]
log_cli = false
log_cli_level = "INFO"
log_file = "tests/pytest.log"
log_file_level = "DEBUG"
addopts = "--cov=. --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.uv]
index-strategy = "first-index"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "core*", "managers*", "plugins*"]
exclude = ["tests*", "docs*", "scripts*", "data*", "logs*", "*.tests"]

[tool.setuptools]
include-package-data = true
py-modules = ["cli", "main", "web_server", "gui_launcher", "config", "github_upload"]

[tool.setuptools.data-files]
"share/sidar/web_ui" = ["web_ui/*.html", "web_ui/*.css", "web_ui/*.js"]
"share/sidar/launcher_gui" = ["launcher_gui/*.html", "launcher_gui/*.css", "launcher_gui/*.js"]
"share/sidar/helm" = [
  "helm/sidar/Chart.yaml",
  "helm/sidar/*.yaml",
  "helm/sidar/templates/*.yaml",
  "helm/sidar/templates/*.tpl",
  "helm/sidar/templates/*.txt",
]
"share/sidar/migrations" = [
  "alembic.ini",
  "migrations/*.py",
  "migrations/*.mako",
  "migrations/versions/*.py",
]
"share/sidar/docker_setup" = [
  "docker_setup/prometheus/*.yml",
  "docker_setup/grafana/dashboards/*.json",
  "docker_setup/grafana/provisioning/dashboards/*.yml",
  "docker_setup/grafana/provisioning/datasources/*.yml",
]
"share/sidar/runbooks" = [
  "runbooks/*.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "data",
  "logs",
  "migrations",
  "docker_setup",
  "build",
  "dist",
  "temp",
  "web_ui",
  "web_ui_react",
  "launcher_gui",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "ASYNC",
]
ignore = [
  "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
pretty = true
exclude = [
  "^tests/",
  "^data/",
  "^logs/",
  "^temp/",
  "^migrations/",
  "^build/",
  "^web_ui/",
  "^web_ui_react/",
  "^launcher_gui/",
]

[[tool.mypy.overrides]]
module = [
  "google.genai",
  "google.genai.*",
  "google.generativeai",
  "google.generativeai.*",
  "chromadb",
  "chromadb.*",
  "sentence_transformers",
  "sentence_transformers.*",
  "duckduckgo_search",
  "duckduckgo_search.*",
  "github",
  "github.*",
  "opentelemetry",
  "opentelemetry.*",
  "redis",
  "redis.*",
  "prometheus_client",
  "prometheus_client.*",
]
ignore_missing_imports = true
