[metadata]
name = sidar-project
version = 5.1.0
description = Sidar AI: Multi-Agent Autonomous System with Swarm Capability
long_description = file: README.md
long_description_content_type = text/markdown
author = Nilüfer Bagevi & Contributors
project_urls =
    Repository = https://github.com/niluferbagevi-gif/Sidar
    Documentation = https://github.com/niluferbagevi-gif/Sidar/docs
    Changelog = https://github.com/niluferbagevi-gif/Sidar/releases

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11

[options.packages.find]
where = .
include = agent*, core*, managers*, plugins*
exclude = tests*, docs*, scripts*, data*, logs*, *.tests

[bdist_wheel]
universal = 0
